2014-12-16  Jon Beniston  <jon@beniston.com>

	* libc/include/stdlib.h (__itoa):  Declare prototype.
	(__utoa): Ditto.
	(itoa): Ditto, non-strict-ANSI only.
	(utoa): Ditto.
	* libc/stdlib/Makefile.am: Add itoa.c and utoa.c.
	* libc/stdlib/Makefile.in: Regenerate.
	* libc/stdlib/itoa.c: New file.
	* libc/stdlib/utoa.c: New file.

2014-12-15  Jonathan Roelofs  <jonathan@codesourcery.com>

	* libc/include/math.h: Add log2l,logbl,nexttowardf,
	* nexttoward,nexttowardl
	* libm/common/Makefile.am: Reference new files
	* libm/common/Makefile.in: Reference new files
	* libm/common/log2l.c: New File
	* libm/common/logbl.c: Likewise
	* libm/common/nexttowardf.c: Likewise
	* libm/common/nexttoward.c: Likewise
	* libm/common/nexttowardl.c: Likewise

2014-12-15  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/include/stdio.h (__SNLK): Define.
	* libc/include/stdio_ext.h (FSETLOCKING_QUERY, FSETLOCKING_INTERNAL,
	FSETLOCKING_BYCALLER): Define.
	(__fsetlocking): Declare.
	* libc/stdio/Makefile.am: Build fsetlocking.c.
	* libc/stdio/Makefile.in: Regenerate.
	* libc/stdio/fsetlocking.c: New file.
	* libc/stdio/local.h (_newlib_flockfile_start): Make _flockfile
	call dependent on __SNLK flag.
	(_newlib_flockfile_exit, _newlib_flockfile_end): Ditto for
	_funlockfile calls.
	Define all locking macros as empty if __SINGLE_THREAD__.
	* libc/stdio/stdio.tex: Include fsetlocking.def.

2014-12-15  Nick Hung  <nick@andestech.com>

	* newlib/libc/include/machine/setjmp.h: Add FPU support.
	* newlib/libc/machine/nds32/setjmp.S: Add FPU support.

2014-12-15  Nick Hung  <nick@andestech.com>

	* configure.host: Add libm nds32 machine directory.
	* libm/machine/configure: Regenerated.
	* libm/machine/configure.in: Add nds32 AC_CONFIG.
	* libm/machine/nds32/Makefile.am: New file.
	* libm/machine/nds32/Makefile.in: Generated.
	* libm/machine/nds32/aclocal.m4: Generated.
	* libm/machine/nds32/configure: Generated.
	* libm/machine/nds32/configure.in: New file.